--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,7 @@ main {
   display: flex;
   padding: 20px 8vw;
   justify-content: space-between;
+  align-items: center;
 }
 
 .section p {
@@ -425,14 +426,22 @@ select {
 @media screen and (max-width: 675px) {
   .header_1 {
     flex-direction: column;
+    margin: 10px 0px;
   }
   .header_search {
     display: none;
+  }
+  .btn_login {
+    display: none;
+  }
+  .header_2 {
+    padding: 0px 3vw;
   }
 
   footer {
     flex-direction: column;
     align-items: center;
+    padding: 20px;
   }
 
   .items {
@@ -443,7 +452,13 @@ select {
     width: 150px;
   }
   .items_container {
+    width: 100%;
     justify-content: center;
+    padding: 0px 3vw 40px 3vw;
+  }
+  .section {
+    padding: 0px 6.5vw 30px 6vw;
+    align-items: center;
   }
   .product-flex {
     flex-direction: column;
